--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="menu_item_six">Menu Item Six</string>
     <string name="title_activity_paye_calculator">PayeCalculator</string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
